kubernetes/workloads/home/sample-app/overlays/k3s-01/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/part-of: home-workloads
    homelab.plexplease.com/criticality: non-critical
